@@ -152,6 +152,8 @@ Release 0.20.0 - Unreleased
    HBASE-1235  Add table enabled status to shell and UI
                (Lars George via Stack)
    HBASE-1333  RowCounter updates
+   HBASE-1195  If HBase directory exists but version file is inexistent, still
+               proceed with bootstrapping (Evgeny Ryabitskiy via Stack)
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
